--- a/src/main/resources/config/card/cardlevel.yml
+++ b/src/main/resources/config/card/cardlevel.yml
@@ -1,17 +1,7 @@
-#服务器执行一次匹配的间隔时间
-host.match.interval: 5
-#匹配超时，会话被清理掉
-host.match.timeout: 300
-#超过匹配时间，系统自动匹配AI
-host.match.auto: 300
-
-# 内嵌tomcat线程最大数量，默认是200； 内存优化
-server.tomcat.max-threads: 10
-
 # Redis数据库索引（默认为0）
 spring.redis.database: 0  
 # Redis服务器地址
-spring.redis.host: 172.20.1.102
+spring.redis.host: localhost
 # Redis服务器连接端口
 spring.redis.port: 6379  
 # Redis服务器连接密码（默认为空）
@@ -30,7 +20,7 @@ spring.redis.timeout: 5000ms
 #配置缓存相关
 cache.default.expire-time: 200
 cache.host.expire-time: 180
-cache.host.name: hosts
+cache.host.name: levels
 
 #Setting logging levels
 logging:
@@ -46,10 +36,14 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://172.20.1.3:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
         
 #OAuth2
 #security:
 #  oauth2:
 #   resource:
-#      userInfoUri: http://172.20.1.5:8901/user
+#      userInfoUri: http://localhost:8901/user
+
+#Redis
+redis.host: 127.0.0.1
+redis.port: 6379
